--- a/imagens/estilo/style.css
+++ b/imagens/estilo/style.css
@@ -1,1 +1,73 @@
 @charset "UTF-8";
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    min-width: 100%;
+    background-color: darkgray;
+}
+
+header {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+header > h1 {
+    padding-top: 50px;
+    /* text-transform: uppercase; Para jogar as letras para maiúscula */
+    font-variant: small-caps;
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+header a, footer a {
+    color: white;
+    text-decoration: none;/* para tirar a decoração das letras */
+    font-weight: bolder;/* para deixar em negrito */
+}
+
+a:hover { /*Para quando passar o mouse em cima deixar sublinhado */
+    text-decoration: underline;
+}
+
+section {
+    /* Criando efeito parallax*/
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em; /* Criando espaçamento entre as frases */
+    padding-left: 30px; /* Afastar um pouco a letra das bordas */
+    
+}
+
+section.normaml {
+    background-color: white;
+    color: black;
+}
+
+section.imagem {
+    background-color: rgba(51, 51, 51);
+    color: white;
+}
+
+section.imagem > p {
+    /* Criando uma caixa preta */
+    background-color: rgba(0, 0, 0, 0.253);
+    width: 400px;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+
+body {
+
+}
