--- a/imagens/estilo/style.css
+++ b/imagens/estilo/style.css
@@ -1,13 +1,25 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: verdana, Geneva, Ta homa, sans-serif;
+    --fonte2: 'Passion one', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-width: 100%;
-    background-color: darkgray;
+    background-color: #fff;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -20,6 +32,8 @@ header > h1 {
     padding-top: 50px;
     /* text-transform: uppercase; Para jogar as letras para maiúscula */
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vh;
 }
 
 header > p {
@@ -42,6 +56,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em; /* Criando espaçamento entre as frases */
     padding-left: 30px; /* Afastar um pouco a letra das bordas */
+    font-family: var(--fonte3);
+    font-size: 3.5vh;
     
 }
 
@@ -58,7 +74,8 @@ section.imagem {
 section.imagem > p {
     /* Criando uma caixa preta */
     background-color: rgba(0, 0, 0, 0.253);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer {
